envio lead_Inmobiliaria

--- a/data/apendizador_archivos.ipynb
+++ b/data/apendizador_archivos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "8147015e",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "id": "da034e13",
    "metadata": {},
    "outputs": [],
@@ -51,17 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "id": "d5da0c52",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = apendizador_leads(r\"C:\\Users\\ejgar\\OneDrive\\Documentos\\GitHub\\Leads_sheacher\\data\",\"Agencia_de_Viajes\")"
+    "df = apendizador_leads(r\"C:\\Users\\ejgar\\OneDrive\\Documentos\\GitHub\\Leads_sheacher\\data\",\"Inmobiliaria\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "id": "3f19cb93",
    "metadata": {},
    "outputs": [
@@ -70,19 +70,19 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 273 entries, 0 to 272\n",
+      "RangeIndex: 50 entries, 0 to 49\n",
       "Data columns (total 7 columns):\n",
       " #   Column     Non-Null Count  Dtype \n",
       "---  ------     --------------  ----- \n",
-      " 0   Nombre     273 non-null    object\n",
-      " 1   Direccion  273 non-null    object\n",
-      " 2   Telefono   269 non-null    object\n",
-      " 3   Web        273 non-null    object\n",
-      " 4   Email      273 non-null    object\n",
-      " 5   Sector     273 non-null    object\n",
-      " 6   Ubicacion  273 non-null    object\n",
+      " 0   Nombre     50 non-null     object\n",
+      " 1   Direccion  50 non-null     object\n",
+      " 2   Telefono   50 non-null     object\n",
+      " 3   Web        50 non-null     object\n",
+      " 4   Email      50 non-null     object\n",
+      " 5   Sector     50 non-null     object\n",
+      " 6   Ubicacion  50 non-null     object\n",
       "dtypes: object(7)\n",
-      "memory usage: 15.1+ KB\n"
+      "memory usage: 2.9+ KB\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "id": "cc7fe8dc",
    "metadata": {},
    "outputs": [
@@ -129,52 +129,52 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Spencer Trip</td>\n",
-       "      <td>C. de Jacinto Benavente, 7, 2º B, 28100 Alcobe...</td>\n",
-       "      <td>+34 633 82 20 14</td>\n",
-       "      <td>http://www.spencertrip.com/</td>\n",
-       "      <td>analia@spencertrip.com</td>\n",
-       "      <td>Agencia de Viajes</td>\n",
+       "      <td>New House Inmobiliaria</td>\n",
+       "      <td>P.º de la Chopera, 125, 28100 Alcobendas, Madrid</td>\n",
+       "      <td>+34 911 79 47 52</td>\n",
+       "      <td>http://www.newhouseinmobiliaria.es/</td>\n",
+       "      <td>info@newhouseinmobiliaria.es</td>\n",
+       "      <td>Inmobiliaria</td>\n",
        "      <td>Alcobendas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Halcón Viajes</td>\n",
-       "      <td>C. de Mariano Sebastian Izuel, 3, 28100 Alcobe...</td>\n",
-       "      <td>+34 910 29 39 85</td>\n",
-       "      <td>https://oficina.halconviajes.com/2748</td>\n",
-       "      <td>alcobendas-izuel@halconviajes.com</td>\n",
-       "      <td>Agencia de Viajes</td>\n",
+       "      <td>APINORTE Inmobiliaria</td>\n",
+       "      <td>C. de la Libertad, 57, LOC, 28100 Alcobendas, ...</td>\n",
+       "      <td>+34 914 84 01 50</td>\n",
+       "      <td>https://apinorteinmobiliaria.es/</td>\n",
+       "      <td>apinorte@yahoo.com</td>\n",
+       "      <td>Inmobiliaria</td>\n",
        "      <td>Alcobendas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Viajamor.com</td>\n",
-       "      <td>Av. Matapiñonera, 11, Edif. 4, 106 Es en los E...</td>\n",
-       "      <td>+34 916 51 21 75</td>\n",
-       "      <td>https://www.viajamor.com/</td>\n",
-       "      <td>info@viajamor.com</td>\n",
-       "      <td>Agencia de Viajes</td>\n",
+       "      <td>Inmobiliaria Garsan Alcobendas</td>\n",
+       "      <td>Pl. del Sauce, 2, 28100 Alcobendas, Madrid</td>\n",
+       "      <td>+34 910 12 34 44</td>\n",
+       "      <td>https://www.inmogarsan.es/</td>\n",
+       "      <td>info@inmogarsan.es</td>\n",
+       "      <td>Inmobiliaria</td>\n",
        "      <td>Alcobendas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Viajes Carrefour Alcobendas</td>\n",
-       "      <td>Carr. de Madrid a Burgos, Km. 14, 500, 28108 A...</td>\n",
-       "      <td>+34 916 63 09 00</td>\n",
-       "      <td>https://agencias.viajes.carrefour.es/viajes-ca...</td>\n",
-       "      <td>es.viajes.alcobendas@carrefour.com</td>\n",
-       "      <td>Agencia de Viajes</td>\n",
+       "      <td>Inmobiliaria Milenium</td>\n",
+       "      <td>C. de Manuel de Falla, 91, 28100 Alcobendas, M...</td>\n",
+       "      <td>+34 916 52 13 19</td>\n",
+       "      <td>http://www.grupo-milenium.com/</td>\n",
+       "      <td>m.falla@grupo-milenium.com</td>\n",
+       "      <td>Inmobiliaria</td>\n",
        "      <td>Alcobendas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Nautalia</td>\n",
-       "      <td>C. del Marqués de la Valdavia, 119, 28100 Alco...</td>\n",
-       "      <td>+34 910 02 44 42</td>\n",
-       "      <td>https://agencias.nautaliaviajes.com/alcobendas...</td>\n",
-       "      <td>0645@nautaliaviajes.es</td>\n",
-       "      <td>Agencia de Viajes</td>\n",
+       "      <td>Inmobiliaria Reviale Alcobendas</td>\n",
+       "      <td>C. de Ramón y Cajal, 5, 28100 Alcobendas, Madrid</td>\n",
+       "      <td>+34 609 47 59 03</td>\n",
+       "      <td>https://reviale.com/</td>\n",
+       "      <td>info@reviale.com</td>\n",
+       "      <td>Inmobiliaria</td>\n",
        "      <td>Alcobendas</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -182,36 +182,36 @@
        "</div>"
       ],
       "text/plain": [
-       "                        Nombre  \\\n",
-       "0                 Spencer Trip   \n",
-       "1                Halcón Viajes   \n",
-       "2                 Viajamor.com   \n",
-       "3  Viajes Carrefour Alcobendas   \n",
-       "4                     Nautalia   \n",
+       "                            Nombre  \\\n",
+       "0           New House Inmobiliaria   \n",
+       "1            APINORTE Inmobiliaria   \n",
+       "2   Inmobiliaria Garsan Alcobendas   \n",
+       "3            Inmobiliaria Milenium   \n",
+       "4  Inmobiliaria Reviale Alcobendas   \n",
        "\n",
        "                                           Direccion          Telefono  \\\n",
-       "0  C. de Jacinto Benavente, 7, 2º B, 28100 Alcobe...  +34 633 82 20 14   \n",
-       "1  C. de Mariano Sebastian Izuel, 3, 28100 Alcobe...  +34 910 29 39 85   \n",
-       "2  Av. Matapiñonera, 11, Edif. 4, 106 Es en los E...  +34 916 51 21 75   \n",
-       "3  Carr. de Madrid a Burgos, Km. 14, 500, 28108 A...  +34 916 63 09 00   \n",
-       "4  C. del Marqués de la Valdavia, 119, 28100 Alco...  +34 910 02 44 42   \n",
+       "0   P.º de la Chopera, 125, 28100 Alcobendas, Madrid  +34 911 79 47 52   \n",
+       "1  C. de la Libertad, 57, LOC, 28100 Alcobendas, ...  +34 914 84 01 50   \n",
+       "2         Pl. del Sauce, 2, 28100 Alcobendas, Madrid  +34 910 12 34 44   \n",
+       "3  C. de Manuel de Falla, 91, 28100 Alcobendas, M...  +34 916 52 13 19   \n",
+       "4   C. de Ramón y Cajal, 5, 28100 Alcobendas, Madrid  +34 609 47 59 03   \n",
        "\n",
-       "                                                 Web  \\\n",
-       "0                        http://www.spencertrip.com/   \n",
-       "1              https://oficina.halconviajes.com/2748   \n",
-       "2                          https://www.viajamor.com/   \n",
-       "3  https://agencias.viajes.carrefour.es/viajes-ca...   \n",
-       "4  https://agencias.nautaliaviajes.com/alcobendas...   \n",
+       "                                   Web                         Email  \\\n",
+       "0  http://www.newhouseinmobiliaria.es/  info@newhouseinmobiliaria.es   \n",
+       "1     https://apinorteinmobiliaria.es/            apinorte@yahoo.com   \n",
+       "2           https://www.inmogarsan.es/            info@inmogarsan.es   \n",
+       "3       http://www.grupo-milenium.com/    m.falla@grupo-milenium.com   \n",
+       "4                 https://reviale.com/              info@reviale.com   \n",
        "\n",
-       "                                Email             Sector   Ubicacion  \n",
-       "0              analia@spencertrip.com  Agencia de Viajes  Alcobendas  \n",
-       "1   alcobendas-izuel@halconviajes.com  Agencia de Viajes  Alcobendas  \n",
-       "2                   info@viajamor.com  Agencia de Viajes  Alcobendas  \n",
-       "3  es.viajes.alcobendas@carrefour.com  Agencia de Viajes  Alcobendas  \n",
-       "4              0645@nautaliaviajes.es  Agencia de Viajes  Alcobendas  "
+       "         Sector   Ubicacion  \n",
+       "0  Inmobiliaria  Alcobendas  \n",
+       "1  Inmobiliaria  Alcobendas  \n",
+       "2  Inmobiliaria  Alcobendas  \n",
+       "3  Inmobiliaria  Alcobendas  \n",
+       "4  Inmobiliaria  Alcobendas  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "300d5fec",
    "metadata": {},
    "outputs": [
@@ -230,22 +230,118 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✔ Email enviado a muzquiz.10@gmail.com\n",
+      "✔ Email enviado a info@newhouseinmobiliaria.es\n",
       "Emails enviados hasta ahora: 1\n",
-      "✔ Email enviado a muzquiz.10@gmail.com\n",
-      "Emails enviados hasta ahora: 2\n"
+      "✔ Email enviado a apinorte@yahoo.com\n",
+      "Emails enviados hasta ahora: 2\n",
+      "✔ Email enviado a info@inmogarsan.es\n",
+      "Emails enviados hasta ahora: 3\n",
+      "✔ Email enviado a m.falla@grupo-milenium.com\n",
+      "Emails enviados hasta ahora: 4\n",
+      "✔ Email enviado a info@reviale.com\n",
+      "Emails enviados hasta ahora: 5\n",
+      "✔ Email enviado a info@newhouseinmobiliaria.es\n",
+      "Emails enviados hasta ahora: 6\n",
+      "✔ Email enviado a picassa@picassa.com\n",
+      "Emails enviados hasta ahora: 7\n",
+      "✔ Email enviado a almagro@iencuentro.es\n",
+      "Emails enviados hasta ahora: 8\n",
+      "✔ Email enviado a alcobendas@redpiso.es\n",
+      "Emails enviados hasta ahora: 9\n",
+      "✔ Email enviado a m.falla@grupo-milenium.com\n",
+      "Emails enviados hasta ahora: 10\n",
+      "✔ Email enviado a info@alser-asesores.com\n",
+      "Emails enviados hasta ahora: 11\n",
+      "✔ Email enviado a info@myidealhome.es\n",
+      "Emails enviados hasta ahora: 12\n",
+      "✔ Email enviado a info@madridalnorte.es\n",
+      "Emails enviados hasta ahora: 13\n",
+      "✔ Email enviado a hola@inmobiliariaprimernivel.es\n",
+      "Emails enviados hasta ahora: 14\n",
+      "✔ Email enviado a info@vistahomes.es\n",
+      "Emails enviados hasta ahora: 15\n",
+      "✔ Email enviado a optima@remax.es\n",
+      "Emails enviados hasta ahora: 16\n",
+      "✔ Email enviado a info@awaproperties.com\n",
+      "Emails enviados hasta ahora: 17\n",
+      "✔ Email enviado a info@buenagestion.wearepleh.com\n",
+      "Emails enviados hasta ahora: 18\n",
+      "✔ Email enviado a lecleinmo@gmail.com\n",
+      "Emails enviados hasta ahora: 19\n",
+      "✔ Email enviado a 55ff59f80a0a4d8db647ec265bf5eff9@sentry.medialabtc.it\n",
+      "Emails enviados hasta ahora: 20\n",
+      "✔ Email enviado a rivasbellavista@hogaresgroup.es\n",
+      "Emails enviados hasta ahora: 21\n",
+      "✔ Email enviado a alcobendasnorte@redpiso.es\n",
+      "Emails enviados hasta ahora: 22\n",
+      "✔ Email enviado a alcobendas@circularinmobiliaria.es\n",
+      "Emails enviados hasta ahora: 23\n",
+      "✔ Email enviado a 55ff59f80a0a4d8db647ec265bf5eff9@sentry.medialabtc.it\n",
+      "Emails enviados hasta ahora: 24\n",
+      "✔ Email enviado a contacto@businesshome.es\n",
+      "Emails enviados hasta ahora: 25\n",
+      "✔ Email enviado a info@relocationmadrid.es\n",
+      "Emails enviados hasta ahora: 26\n",
+      "✔ Email enviado a tucorreo@ejemplo.com\n",
+      "Emails enviados hasta ahora: 27\n",
+      "✔ Email enviado a comercial@cornejo-inmuebles.com\n",
+      "Emails enviados hasta ahora: 28\n",
+      "✔ Email enviado a info@intecasa.net\n",
+      "Emails enviados hasta ahora: 29\n",
+      "✔ Email enviado a creativinnova83@gmail.com\n",
+      "Emails enviados hasta ahora: 30\n",
+      "✔ Email enviado a m.falla@grupo-milenium.com\n",
+      "Emails enviados hasta ahora: 31\n",
+      "✔ Email enviado a roraima@century21.es\n",
+      "Emails enviados hasta ahora: 32\n",
+      "✔ Email enviado a rea@reamadrid.com\n",
+      "Emails enviados hasta ahora: 33\n",
+      "✔ Email enviado a info@casasyseguros.com\n",
+      "Emails enviados hasta ahora: 34\n",
+      "✔ Email enviado a atencion.cliente@gilmar.es\n",
+      "Emails enviados hasta ahora: 35\n",
+      "✔ Email enviado a info@sumainmobiliaria.es\n",
+      "Emails enviados hasta ahora: 36\n",
+      "✔ Email enviado a info@livinglamoraleja.com\n",
+      "Emails enviados hasta ahora: 37\n",
+      "✔ Email enviado a info@vidaconarte.es\n",
+      "Emails enviados hasta ahora: 38\n",
+      "✔ Email enviado a hola@inmobiliariaprimernivel.es\n",
+      "Emails enviados hasta ahora: 39\n",
+      "✔ Email enviado a info@imperioinmobiliario.es\n",
+      "Emails enviados hasta ahora: 40\n",
+      "✔ Email enviado a info@vihabit.com.com\n",
+      "Emails enviados hasta ahora: 41\n",
+      "✔ Email enviado a info@desalas.com\n",
+      "Emails enviados hasta ahora: 42\n",
+      "✔ Email enviado a info@pisosyseguros.com\n",
+      "Emails enviados hasta ahora: 43\n",
+      "✔ Email enviado a 55ff59f80a0a4d8db647ec265bf5eff9@sentry.medialabtc.it\n",
+      "Emails enviados hasta ahora: 44\n",
+      "✔ Email enviado a info@houx.es\n",
+      "Emails enviados hasta ahora: 45\n",
+      "✔ Email enviado a info@beehome.es\n",
+      "Emails enviados hasta ahora: 46\n",
+      "✔ Email enviado a comercial@elencinar.es\n",
+      "Emails enviados hasta ahora: 47\n",
+      "✔ Email enviado a administracion@gelmajimenez.es\n",
+      "Emails enviados hasta ahora: 48\n",
+      "✔ Email enviado a info@sotomora.com\n",
+      "Emails enviados hasta ahora: 49\n",
+      "✔ Email enviado a comercial@solvia.es\n",
+      "Emails enviados hasta ahora: 50\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[45]\u001b[39m\u001b[32m, line 68\u001b[39m\n\u001b[32m     66\u001b[39m     contador += \u001b[32m1\u001b[39m\n\u001b[32m     67\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mEmails enviados hasta ahora: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcontador\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m68\u001b[39m     \u001b[43mtime\u001b[49m\u001b[43m.\u001b[49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     69\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m     70\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m❌ Error enviando a \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdestinatario\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
-     ]
+     "data": {
+      "text/plain": [
+       "(221,\n",
+       " b'2.0.0 closing connection ffacd0b85a97d-432d9610671sm5864014f8f.34 - gsmtp')"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -273,10 +369,14 @@
     "contador = 0\n",
     "\n",
     "for _, row in df.iterrows():\n",
-    "    destinatario = row['Email']\n",
-    "    # destinatario = \"muzquiz.10@gmail.com\"  #Para pruebas\n",
-    "    nombre = row['Nombre']\n",
+    "    ### Pruebas ###\n",
     "    # nombre = \"Enrique\" #Para pruebas\n",
+    "    # destinatario = \"muzquiz.10@gmail.com\"  #Para pruebas\n",
+    "    ## Fin Pruebas ##\n",
+    "\n",
+    "    destinatario = row['Email']\n",
+    "    nombre = row['Nombre']\n",
+    "    \n",
     "    mensaje = MIMEMultipart()\n",
     "    mensaje['From'] = EMAIL_REMITENTE\n",
     "    mensaje['To'] = destinatario\n",
